# llm-smart-contract-evals

./: .gitignore  README.md  pyproject.toml
benchmark/: __init__.py  cases.json  llm_client.py  prompts.py  schema.md  scorer.py  scoring.md
contracts/: case_001.sol  case_002.sol  case_003.sol  case_004.sol  case_005.sol  case_006.sol  case_007.sol  case_008.sol
scripts/: build_results_tables.py  init_scoring_sheet.py  run_eval.py  summarize_scores.py  validate_cases.py
tests/: test_build_results_tables.py  test_cases.py  test_init_scoring_sheet.py  test_llm_client.py  test_prompts.py  test_run_eval.py  test_scorer.py
tests/fixtures/: sample_raw_outputs.jsonl  sample_scores.csv
