[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-smart-contract-evals"
version = "0.1.0"
description = "Minimal benchmark scaffold for evaluating LLMs on smart-contract vulnerabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

